Clean up DynamicWhereFilter a bit, and make TestConcurrentInstantiation pass